update index.html buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     let buttons = document.getElementsByTagName('button');
     // Console Log Button
     buttons[0].addEventListener('click', function(){
-      console.log(`${firstNum} ${operator} ${secondNum} = ${output}`);
+      console.log('Console Log Demo');
     });
     // Console Error Button
     buttons[1].addEventListener('click', function(){
@@ -187,7 +187,7 @@
     // Reference: https://javascript.info/try-catch
     function aintGonnaWork(){
       const element = document.getElementsByTagName('head');
-      element.remove();
+      element.innerHTML = '';
     }
     try {
       aintGonnaWork();
